fix: add shell opens